substrate/frame/support/test/tests/pallet_ui/storage_wrong_item.stderr
error: Invalid pallet::storage, expect item type.
  --> tests/pallet_ui/storage_wrong_item.rs:36:2
   |
36 |     impl Foo {}
   |     ^^^^
